Fix: Overflowing, Positioning and Styling

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -91,6 +91,8 @@
 @media screen and (max-width: 50rem) {
     .about-info{
       font-size: 0.8rem;
+      padding-left: 20px;
+      margin: 2rem 0 2rem 0; 
     }
     .about-heading{
       font-size: 30px;
@@ -114,7 +116,7 @@
   .about-content{
     text-align: center;
     width: 100%;
-    padding: 0 2rem;
+    padding: 1rem 0rem;
   }
   .about-heading{
     text-align: center;
